# minecraft-protocol

protocol/: Cargo.toml
protocol/src/: handshake.rs  lib.rs
